src/main.css
html,
body {
  margin: 0;
  padding: 0;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  flex-direction: column;
  position: relative;
}

.grid {
  padding: 0.5em;
}

.grid__item {
  padding: 2em;
}

.the-details {
  color: #3A3D42;
  font-family: 'Roboto', sans-serif;
  max-width: 800px;
  margin: auto;
  overflow: hidden;
}

.the-details__summary {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.the-details i {
  font-size: 2em;
}

.the-episode {
  color: #ffffff;
  text-shadow: 0 3px 5px #000000;
  background-image: url(https://image.tmdb.org/t/p/original/sCx2r2bw49OqxnjWaU9DsPwdR0C.jpg);
  background-size: cover;
  font-family: 'Kalam', cursive;
  text-align: center;
  overflow: hidden;
  /* Leave enough space to display the absolutely positioned scroll indicator. */
  /* padding-bottom: 3em; */
}

.the-episode #tmdb-watermark {
  position: absolute;
  bottom: 1em;
  right: 1em;
  width: auto;
  height: 3em;
}

/* Scroll indicator */

#mouse {
  fill: #ffffff;
}

#ScrollWheel {
  animation: 2s ease-in-out scroll infinite;
}

.the-episode__scroll-indicator {
  position: absolute;
  bottom: 1em;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0.5;
}

.the-episode__scroll-indicator > svg {
  width: auto;
  height: 2em;
}

.the-episode__season-episode {
  font-size: 4em;
}

.the-episode__episode-title {
  letter-spacing: 4;
  font-size: 3em;
}

/* Add quotes to the title */
.the-episode__episode-title::before {
  content: "\"";
}

.the-episode__episode-title::after {
  content: "\"";
}

/* Colorize dots friends style */
i::before {
  content: ".";
}

i:nth-of-type(n) {
  color: #EA4D39;
}

i:nth-of-type(2n) {
  color: #02AFF5;
}

i:nth-of-type(3n) {
  color: #F2C73F;
}

/* Animations */
@keyframes scroll {
  0% {
    transform: translateY(0%);
    opacity: 0;
  }

  10% {
    transform: translateY(0%);
    opacity: 1;
  }

  70% {
    transform: translateY(100%);
    opacity: 1;
  }

  80% {
    transform: translateY(100%);
    opacity: 0;
  }

  100% {
    transform: translateY(0%);
    opacity: 0;
  }
}

